@@ -1,3 +1,8 @@
+2010-12-18  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR debug/46782
+	* gcc.dg/debug/pr46782.c: New.
+
 2010-12-17  Daniel Kraft  <d@domob.eu>
 
 	PR fortran/46794
