@@ -1,3 +1,8 @@
+2010-12-18  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR debug/46782
+	* cfgcleanup.c (try_forward_edges): Skip debug insns.
+
 2010-12-16  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* tree-ssa-sccvn.c (vn_reference_lookup_3): Always punt if the call to
